# ims-telegram-bot

./: .gitignore  app.py  extraction.py  get_pdf.py  push_notice.py  pyproject.toml  requirements.txt
app/: main.py
